Change pattern to focus on preceding wikilinks